--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,16 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.github.jpbetz</groupId>
+      <artifactId>cli-util</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.viper</groupId>
       <artifactId>io.viper.core</artifactId>
-      <version>0.1.1-SNAPSHOT</version>
+      <version>0.1.2-SNAPSHOT</version>
     </dependency>
+<!--
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
@@ -43,6 +49,7 @@
       <artifactId>json</artifactId>
       <version>20090211</version>
     </dependency>
+-->
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
@@ -56,10 +63,20 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
+        <version>2.14.1</version>
         <executions>
           <execution>
+            <id>scala-compile-first</id>
+            <phase>process-resources</phase>
             <goals>
+              <goal>add-source</goal>
               <goal>compile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>scala-test-compile</id>
+            <phase>process-test-resources</phase>
+            <goals>
               <goal>testCompile</goal>
             </goals>
           </execution>
